--- a/JoveJump/Packages/manifest.json
+++ b/JoveJump/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.device-simulator": "2.2.3-preview",
     "com.unity.ide.visualstudio": "2.0.2",
+    "com.unity.mobile.android-logcat": "1.1.1",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
